fix: text overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,11 @@ main {
     min-height: 12rem;
     font-size: 2rem;
     color: var(--primary-color);
+    max-width: 100%;
+
+    & p {
+        max-width: calc(100vw - 2rem);
+    }
 }
 .input-buttons {
     display: flex;
@@ -80,11 +85,14 @@ button {
     border-radius: 2rem;
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 8%);
     text-align: center;
+    max-width: calc(100vw - 2rem);
 
     .output-text {
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        max-width: calc(100vw - 4rem);
+        overflow: hidden;
         
         & h2 {
             font-size: 1.5rem;
@@ -98,6 +106,7 @@ button {
     
         & p {
             font-size: 1.5rem;
+            text-align: start;
         }
     }
 }
